::after magic to fix alignment

--- a/source/scss/_title_page.scss
+++ b/source/scss/_title_page.scss
@@ -1,17 +1,27 @@
 
 .title.section .title-text {
+  width: 100%;
   color: white;
 
   &.top {
     font-size: 4em;
-    margin-right: 15vw;
+    // margin-left: 15%;
+    position: relative;
+    &::after {
+      content: ',';
+      position: absolute;
+    }
   }
   &.middle {
     font-size: 6em;
-    margin-left: 4vw;
+    // margin-left: 10%;
+    &::after {
+      content: ',';
+      position: absolute;
+    }
   }
   &.bottom {
     font-size: 8em;
-    margin-left: 20vw;
+    // margin-left: 20vw;
   }
 }
